--- a/css/styles.css
+++ b/css/styles.css
@@ -41,6 +41,7 @@
   /* font sizes */
 
   --font-size-1: 3.75rem; /* 60px - Big text*/
+  --font-size-15: 2.25rem; /* 36px - Big text */
   --font-size-2: 1.125rem; /* 18px - Body text */
   --font-size-3: 1rem; /* 16px - Buttons */
   --font-size-4: 0.875rem; /* 14px - Small text */
@@ -152,15 +153,6 @@ nav ul li a.active {
     background-color: var(--dark-blue);
 }
 
-/* .theme-toggle-wrapper-desktop {
-  position: relative;
-  justify-content: center;
-  width: 70px;
-  height: 30px;
-  border-radius: 15px;
-  background-color: var(--dark-blue);
-} */
-
 .theme-toggle-checkbox {
   opacity: 0;
   width: 0;
@@ -236,12 +228,12 @@ nav ul li a.active {
 }
 
 .mobile-menu {
-  position: fixed;
   gap: 1.25rem;
   top: 0;
     right: 0;
   transform: translateX(100%);
-  width: 250px;
+  max-width: 415px;
+  width: 70%;
   height: 100%;
   background-color: var(--white);
   color: #fff;
@@ -257,7 +249,7 @@ nav ul li a.active {
 
 .mobile-menu nav.mobile ul li a {
   color: var(--grey);
-  font-size: var(--font-size-2);
+  font-size: var(--font-size-15);
 }
 
 .mobile-menu nav.mobile ul li a.active {
@@ -312,7 +304,8 @@ nav ul li a.active {
 }
 
 .hero-content h1 {
-  font-size: 3.5rem;
+  /* font-size: clamp(2rem, 5vw, var(--font-size-1)); */
+  font-size: var(--font-size-1);
   line-height: 1.5;
   font-weight: 700;
 }
@@ -375,7 +368,6 @@ nav ul li a.active {
 
 .hero-image {
   flex: 1;
-  position: relative;
   order: 1;
 }
 
